--- a/Projects.Web/index.html
+++ b/Projects.Web/index.html
@@ -20,25 +20,11 @@
         <h1>projects.</h1>
     </header>
     <div role="main">
-        <div class="projects">
-            <div class="column">
-                <h2>current.</h2>
-                <div class="project">
-                    <h3>a project.</h3>
-                </div>
-            </div>
-            <div class="column">
-                <h2>past.</h2>
-                <div class="project">
-                    <h3>another project with a longer name.</h3>
-                    <div class="intro">intro / expert something something something.</div>
-                </div>
-            </div>
-        </div>
     </div>
     <footer>
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.2.min.js"><\/script>')</script>
+    <script type="text/javascript" src="js/mvc/steal/steal.js?projects"></script>
 </body>
 </html>
